src/github.com/ebay/beam/query/parser/testdata/ask/errors/ask_order.bql
ASK 
WHERE {
	?rims <color> "white"
}
ORDER BY ?rims
